--- a/Docs/Etapa3/1. Mural de Inspiração.md
+++ b/Docs/Etapa3/1. Mural de Inspiração.md
@@ -1,3 +1,3 @@
 # MANUAL DE INSPIRAÇÃO 
 
-
+![A XIS (1)](https://github.com/user-attachments/assets/7aa0ebb1-2ae9-401e-a6c7-848d20e9634e) <width =100>
