--- a/Docs/Etapa3/2. Paleta de cores.md
+++ b/Docs/Etapa3/2. Paleta de cores.md
@@ -1,2 +1,3 @@
 # Paleta de cores 
 
+![Captura de tela 2024-12-02 154846](https://github.com/user-attachments/assets/eb1e2bf3-af2c-4e7d-b584-21cc1f8a114e)
